[package]
name = "postman"
version = "0.1.0"
authors = ["jude-LafiteIII <judewrs@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.10.4"
dotenv = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.33"
diesel = { version = "1.0.0", features = ["mysql"] }
tokio = { version = "0.2", features = ["macros"] }
lazy_static = "1.4.0"
