[package]
name = "postman"
version = "1.2.0"
authors = ["jellywx <judesouthworth@pm.me>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
serenity = { version = "0.10", default-features = false, features = ["http", "model", "rustls_backend"] }
tokio = { version = "1.2" }
sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-rustls", "macros", "mysql", "chrono"] }
log = "0.4"
env_logger = "0.8"
serde_json = "1.0.59"
regex = "1.4"
chrono = "0.4"
chrono-tz = "0.5.3"
lazy_static = "1.4"
num-integer = "0.1"
